loki-direct.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-direct
  namespace: monitoring
spec:
  ports:
    - port: 3100
      targetPort: 3100
      protocol: TCP
  selector:
    app: loki
    name: loki
  type: ClusterIP
