postgres-user-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-db
  template:
    metadata:
      labels:
        app: user-db
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: user-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: user-db-service
spec:
  selector:
    app: user-db
  ports:
    - port: 5432
      targetPort: 5432
